--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,3 @@
-*.class
 *.log
-
-# SBT
-dist/*
 target/
-lib_managed/
-src_managed/
-project/boot/
-project/plugins/project/
-
-# Scala-IDE
-.scala_dependencies
-
-# Eclipse
-.classpath
-.project
-.cache
-
-# IntelliJ IDEA
-*.iml
-*.ipr
-*.iws
-.idea/
+lib/
